docs; Add a link to efficiencies.
This will need to be updated for eaobservatory.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -613,6 +613,10 @@ RxA&19.7$\arcsec$&0.57 & 0.80\\
 \end{center}
 \end{table}
 
+For the latest and historical calibrations visit
+\htmladdnormallink{ACSIS Beam
+Efficiencies}{http://www.jach.hawaii.edu/JCMT/spectral_line/Standards/beameff_acsis.html}.
+
 \subsection{\xlabel{harp}HARP Frontend}
 
 The Heterodyne Receiver Array Programme (HARP) is a 16-receptor array
