docs: Explain -cwd oracdr option in SC/20.
Not many people know this.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -2595,7 +2595,10 @@ bad\_receptors} flag when running the pipeline.}
 
 \begin{enumerate}[label=(\textbf{\arabic*})]
 
-\item Initialise the pipeline software.
+\item Initialise the pipeline software.  The \param{cwd} option
+requests that the current working directory is used for all input and
+output.
+
 \begin{terminalv}
 % oracdr_acsis -cwd
 \end{terminalv}
